--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 没有用到 */
 :root {
   --el-color-primary: #409eff;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -30,7 +30,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica, PingFang SC, Microsoft YaHei, Arial, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Helvetica Neue,
+    Helvetica,
+    PingFang SC,
+    Microsoft YaHei,
+    Arial,
+    sans-serif;
 }
 
 #app {
@@ -64,7 +73,7 @@ div:focus {
     visibility: hidden;
     display: block;
     font-size: 0;
-    content: " ";
+    content: ' ';
     clear: both;
     height: 0;
   }
