--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -83,40 +83,40 @@ div:focus {
   margin: 0;
 }
 .mt-1 {
-  margin-top: 0.25rem;
+  margin-top: 4px; // 0.25rem to 4px
 }
 .mr-1 {
-  margin-right: 0.25rem;
+  margin-right: 4px; // 0.25rem to 4px
 }
 .mb-1 {
-  margin-bottom: 0.25rem;
+  margin-bottom: 4px; // 0.25rem to 4px
 }
 .ml-1 {
-  margin-left: 0.25rem;
+  margin-left: 4px; // 0.25rem to 4px
 }
 .mt-2 {
-  margin-top: 0.5rem;
+  margin-top: 8px; // 0.5rem to 8px
 }
 .mr-2 {
-  margin-right: 0.5rem;
+  margin-right: 8px; // 0.5rem to 8px
 }
 .mb-2 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 8px; // 0.5rem to 8px
 }
 .ml-2 {
-  margin-left: 0.5rem;
+  margin-left: 8px; // 0.5rem to 8px
 }
 .mt-4 {
-  margin-top: 1rem;
+  margin-top: 16px; // 1rem to 16px
 }
 .mr-4 {
-  margin-right: 1rem;
+  margin-right: 16px; // 1rem to 16px
 }
 .mb-4 {
-  margin-bottom: 1rem;
+  margin-bottom: 16px; // 1rem to 16px
 }
 .ml-4 {
-  margin-left: 1rem;
+  margin-left: 16px; // 1rem to 16px
 }
 
 // 文字工具类
