添加搜索组件

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -83,40 +83,40 @@ div:focus {
   margin: 0;
 }
 .mt-1 {
-  margin-top: 4px; // 0.25rem to 4px
+  margin-top: 4px; // 0.25rem 转换为 4px
 }
 .mr-1 {
-  margin-right: 4px; // 0.25rem to 4px
+  margin-right: 4px; // 0.25rem 转换为 4px
 }
 .mb-1 {
-  margin-bottom: 4px; // 0.25rem to 4px
+  margin-bottom: 4px; // 0.25rem 转换为 4px
 }
 .ml-1 {
-  margin-left: 4px; // 0.25rem to 4px
+  margin-left: 4px; // 0.25rem 转换为 4px
 }
 .mt-2 {
-  margin-top: 8px; // 0.5rem to 8px
+  margin-top: 8px; // 0.5rem 转换为 8px
 }
 .mr-2 {
-  margin-right: 8px; // 0.5rem to 8px
+  margin-right: 8px; // 0.5rem 转换为 8px
 }
 .mb-2 {
-  margin-bottom: 8px; // 0.5rem to 8px
+  margin-bottom: 8px; // 0.5rem 转换为 8px
 }
 .ml-2 {
-  margin-left: 8px; // 0.5rem to 8px
+  margin-left: 8px; // 0.5rem 转换为 8px
 }
 .mt-4 {
-  margin-top: 16px; // 1rem to 16px
+  margin-top: 16px; // 1rem 转换为 16px
 }
 .mr-4 {
-  margin-right: 16px; // 1rem to 16px
+  margin-right: 16px; // 1rem 转换为 16px
 }
 .mb-4 {
-  margin-bottom: 16px; // 1rem to 16px
+  margin-bottom: 16px; // 1rem 转换为 16px
 }
 .ml-4 {
-  margin-left: 16px; // 1rem to 16px
+  margin-left: 16px; // 1rem 转换为 16px
 }
 
 // 文字工具类
