--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -79,12 +79,12 @@
   &__header {
     padding: 20px;
     margin-right: 0;
-    border-bottom: 1px solid $border-color-light;
+    // border-bottom: 1px solid $border-color-light;
   }
 
   &__footer {
     padding: 20px;
-    border-top: 1px solid $border-color-light;
+    // border-top: 1px solid $border-color-light;
   }
 }
 
