--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -17,8 +17,10 @@
 // 输入框样式
 .el-input {
   --el-input-focus-border-color: #{$primary-color};
+  width: 160px;
 
   &__inner {
+
     &:hover {
       border-color: #{darken($border-color-base, 10%)};
     }
@@ -27,13 +29,13 @@
 
 // 表格样式
 .el-table {
-  --el-table-header-bg-color: #{$background-color-base};
+  --el-table-header-bg-color: #ffffff; // 修改为白色背景
   --el-table-row-hover-bg-color: #{$background-color-light};
 
   th {
-    background-color: $background-color-base !important;
+    background-color: #ffffff !important; // 确保表头背景色为白色
     font-weight: bold;
-    color: $text-primary;
+    color: #909399; // 修改为浅灰色字体
   }
 }
 
