--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -255,6 +255,8 @@ div:focus {
     box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
     overflow: hidden;
     box-sizing: border-box;
+    border: 1px solid #dcdfe6;
+    /* 添加边框 */
 
     .table-header {
       display: flex;
