--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -238,7 +238,7 @@ div:focus {
 }
 
 .app-container {
-  padding: 16px 0;
+  padding: 0 0 16px;
   height: calc(100vh - 84px);
   display: flex;
   flex-direction: column;
