--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -90,6 +90,11 @@
   }
 }
 
+// 删除对话框
+.el-message-box {
+  border-radius: $border-radius-base;
+}
+
 // 卡片样式
 .el-card {
   --el-card-border-color: #{$border-color-light};
