--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -14,6 +14,41 @@
   &--text {
     padding: 2px 0;
   }
+  &.plain-icon-button {
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    border: none;
+    outline: none;
+    &.el-button--primary {
+      background-color: rgba(64, 158, 255, 0.15);
+      color: #409eff;
+    }
+    &.el-button--primary:hover {
+      background-color: rgba(64, 158, 255, 0.3);
+    }
+    &.el-button--danger {
+      background-color: rgba(245, 108, 108, 0.15);
+      color: #f56c6c;
+    }
+    &.el-button--danger:hover {
+      background-color: rgba(245, 108, 108, 0.3);
+    }
+    &.el-button--success {
+      background-color: rgba(103, 194, 58, 0.15);
+      color: #67c23a;
+    }
+    &.el-button--success:hover {
+      background-color: rgba(103, 194, 58, 0.3);
+    }
+    &.el-button--info {
+      background-color: rgba(154, 157, 160, 0.15);
+      color: #909399;
+    }
+    &.el-button--info:hover {
+      background-color: rgba(154, 157, 160, 0.3);
+    }
+  }
 }
 
 // 输入框样式
@@ -79,7 +114,7 @@
   border-radius: $border-radius-base;
 
   &__header {
-    padding: 20px;
+    padding: 0;
     margin-right: 0;
     // border-bottom: 1px solid $border-color-light;
   }
@@ -87,6 +122,11 @@
   &__footer {
     padding: 20px;
     // border-top: 1px solid $border-color-light;
+  }
+}
+.el-modal-dialog {
+  .el-overlay-dialog {
+    overflow: hidden;
   }
 }
 
